# EarthGL

./: .gitignore  CMakeLists.txt  README.md
Resources/Shaders/: Fragment.frag  Vertex.vert
src/: Camera.cpp  Camera.hpp  EarthGL.hpp  MouseInput.cpp  MouseInput.hpp  Primitives.hpp  main.cpp
src/Graphics/: Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
third/fmt/include/fmt/: core.h
third/glfw/include/GLFW/: glfw3.h
third/glm/include/glm/detail/: type_half.inl
